# sdgs-dashboard

./: .gitignore  INDIVIDU.md  README.md  pyproject.toml
sdgs/: __init__.py
sdgs/auth/: base.py
sdgs/survey_individu/: __init__.py  base.py
sdgs/survey_individu/tambah/: __init__.py  agama.py  disabilitas.py  individu.py  kondisi_pekerjaan.py  pekerjaan_utama.py  pendidikan_diikuti.py  pendidikan_tertinggi.py  penghasilan.py  penyakit_diderita.py  status_pernikahan.py
tests/: test_sdgs.py
