[tool.poetry]
name = "sdgs-dashboard"
version = "0.1.0"
description = ""
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
attrs = "^21.2.0"
cattrs = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
